Fix slideshow buttons being invisible

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -109,7 +109,7 @@ input[type="button"],
 	margin: 3px 3px 3px 0;
 	padding: 7px 6px 5px;
 	font-size: 13px;
-	background: #fff;
+	background-color: #fff;
 	color: #333;
 	border: 1px solid #ddd;
 	outline: none;
